# Naninne-Agente

./: .gitignore  DOCUMENTO-MESTRE.md  README.md
backend/: .env.example  .gitignore  README.md  SPRINT0-deliverable.md  pyproject.toml  requirements.txt  start.bat  start.ps1
backend/app/: config.py  main.py
backend/app/db/: checkpointer.py
backend/app/graph/: edges.py  graph.py  nodes.py  state.py
backend/app/models/: llm.py
backend/app/routers/: chat.py  health.py
backend/tests/: conftest.py  test_graph_smoke.py  test_health.py
docs/: arquitetura-orquestrador-deliverable.md  arquitetura-orquestrador-diagrama.html  arquitetura-orquestrador.md  design-system-deliverable.md  design-system-preview.html  design-system.md  estimativa-custos-deliverable.md  estimativa-custos.md  schema-supabase-deliverable.md  schema-supabase-doc.md  schema-supabase.sql
mockups/: 01-inicio.html  02-biblioteca.html  03-estudio.html  04-escrita.html  05-mobile.html  MOCKUPS-deliverable.md
supabase/: CLOUD-INIT.sql  LOCAL-PORT-NOTES.md  POST-AUTH-INIT.sql  README.md  SPRINT0-deliverable.md  storage-bucket-cloud.sql  verify.sh
supabase/migrations/: 00000000000000_supabase_lite_setup.sql  00000000000001_init.sql  00000000000002_seed_dev.sql  00000000000003_storage_bucket.sql  00000000000099_combined_init.sql
web/: .env.example  .gitignore  README.md  SPRINT0-deliverable.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/_components/: InicioContent.tsx  LoginForm.tsx
web/src/app/audiovisual/: page.tsx
web/src/app/biblioteca/: page.tsx
web/src/app/configuracoes/: page.tsx
web/src/app/documentos/: page.tsx
web/src/components/: empty-state.tsx  providers.tsx
web/src/data/: biblioteca.ts  quick-actions.ts
web/src/lib/: nav.ts  utils.ts
web/src/lib/store/: auth.ts  (+1 more)
(+68 files in other folders)
