[project]
name = "naninne-backend"
version = "0.1.0"
description = "Naninne — Orquestrador LangGraph (esqueleto do Sprint 0)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Mavis (Coder)", email = "coder@naninne.local" },
]
license = { text = "MIT" }

dependencies = [
    # Core LangGraph / LangChain
    "langgraph>=0.2",
    "langgraph-checkpoint>=2.0",
    "langgraph-checkpoint-postgres>=2.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    # HTTP API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Banco / Supabase
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "supabase>=2.8",
    # Configuração
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    # Observabilidade
    "langsmith>=0.2",
    # Utilitários
    "httpx>=0.27",
    "loguru>=0.7",
    "tenacity>=9.0",
    "langgraph-checkpoint-sqlite>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
naninne-api = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
